# prototype-studio

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.json
.github/workflows/: ci.yml
builder/: admin.py  auth.py  forms.py  models.py  tests.py  urls.py  views.py
builder/management/commands/: bootstrap_demo.py  cleanup_artifacts.py
builder/migrations/: 0001_initial.py  0002_fielddefinition_calculation_expression_and_more.py  0003_entitydefinition_builder_ent_project_7388f2_idx_and_more.py
builder/services/: generator.py  generator_css.py  generator_profiles.py  generator_sections.py  preview.py  rules.py  runtime.py  templates.py
builder/static/builder/: rule-builder.js  styles.css  ui.js
builder/templates/builder/: _form_field.html  _form_fields.html  base.html  dashboard.html  entity_detail.html  login.html  project_detail.html  project_form.html  project_preview.html
config/: urls.py
config/settings/: base.py  dev.py  production.py
docs/: SECURITY.md
src/prototype_studio/: __init__.py
